# cnotes-ubuntu-touch

./: ArchiveListView.qml  ArchivesPage.qml  CMakeLists.txt  CNotes.desktop  CNotes.qml  CNotes.qmlproject  CategoriesPage.qml  CreateNotePage.qml  EditNotePage.qml  FilterNoteView.qml  ImagesTab.qml  LinksTab.qml  MainPage.qml  Makefile  NoteItem.qml  NoteView.qml  NotesListView.qml  README.md  Storage.js  TabletView.qml  U1Backend.qml  manifest.json
components/: ImagesTab.qml  LinksTab.qml  MainToolbar.qml  NoteItem.qml  NoteViewRow.qml
dirParserPlugin/: Makefile  app.qml  create_dirs_plugin.cpp  create_dirs_plugin.h  dirParserPlugin.pro  dir_creator.cpp  dir_creator.h
dirParserPlugin/DirParser/: qmldir
dirParserPlugin/tmp/: moc_create_dirs_plugin.cpp  moc_dir_creator.cpp
modules/: CMakeLists.txt
modules/DirParser/: Plugin.cpp  Plugin.h  plugins.qmltypes  qmldir
pages/: ArchivesPage.qml  CategoriesPage.qml  CreateNotePage.qml  EditNotePage.qml  MainPage.qml
qml/: CMakeLists.txt  CNotes.qml
qml/components/: MainToolbar.qml  NoteItem.qml
qml/pages/: ArchivesPage.qml  CategoriesPage.qml  CreateNotePage.qml  MainPage.qml
qml/view/: ArchiveListView.qml  NotesListView.qml  NotesListView.qml~
tests/autopilot/: run
tests/autopilot/CNotes/main/: test_main.py
view/: ArchiveListView.qml  FilterNoteView.qml  NoteView.qml  NotesListView.qml
